added the Login and Register components with an initial implementation
References:
- https://stackoverflow.com/questions/41411155/does-bootstrap-4-have-a-built-in-horizontal-divider
- https://www.pexels.com/photo/abstract-art-artistic-background-1103970/
- https://www.pexels.com/photo/abstract-art-artistic-background-325649/

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,3 +9,25 @@
 .nav-link:hover {
   color: white !important;
 }
+
+.clear {
+  clear: both;
+}
+
+.sign-up-prompt {
+  text-align: center;
+  font-size: 1rem;
+}
+
+.card--login-and-register-modal-adjustment {
+  top: 10rem;
+  border-radius: 5px;
+}
+
+#showcase {
+  background-image: url("./images/showcase_background_pexels_02.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  min-height: 100vh;
+}
