--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
 :root {
   --main-grey-color: #232427;
+  --main-light-grey-color: #f5f5f5;
 }
 
 .navbar--background-color {
@@ -30,4 +31,31 @@
   background-position: center;
   background-size: cover;
   min-height: 100vh;
+}
+
+.profile__header {
+  background-color: var(--main-light-grey-color);
+  height: 400px;
+}
+
+.profile__avatar {
+  height: 100px;
+  margin-top: -25px;
+}
+
+.profile__username {
+  display: inline-block;
+  font-size: 1.3rem;
+  padding: 15px 0px;
+}
+
+.profile__setup-profile-msg {
+  font-size: 1.1rem;
+}
+
+.profile__setup-profile-btn {
+  border-radius: 25px;
+  min-width: 150px;
+  width: 20%;
+  margin-top: 15px;
 }
