--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,13 +49,21 @@
   padding: 15px 0px;
 }
 
-.profile__setup-profile-msg {
+.profile__initialize-profile-msg {
   font-size: 1.1rem;
 }
 
-.profile__setup-profile-btn {
+.profile__initialize-profile-btn {
   border-radius: 25px;
   min-width: 150px;
   width: 20%;
   margin-top: 15px;
+}
+
+.card-title--font-size {
+  font-size: 2.2rem;
+}
+
+.input-group-text--fixed-width {
+  width: 45px;
 }
