--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,8 @@
 :root {
   --main-grey-color: #232427;
   --main-light-grey-color: #f5f5f5;
+  --main-blue-color: #0069d9;
+  --profile-header-color: #505050;
 }
 
 .navbar--background-color {
@@ -34,13 +36,12 @@
 }
 
 .profile__header {
-  background-color: var(--main-light-grey-color);
+  background-color: var(--profile-header-color);
   height: 400px;
 }
 
 .profile__avatar {
   height: 100px;
-  margin-top: -25px;
 }
 
 .profile__username {
@@ -66,4 +67,77 @@
 
 .input-group-text--fixed-width {
   width: 45px;
+}
+
+.profile__section {
+  min-height: 250px;
+  background-color: white;
+  padding: 25px;
+  border-radius: 4px;
+  border: 1px solid lightgrey;
+}
+
+.section__heading {
+  font-size: 1.3rem;
+  font-weight: unset;
+  display: inline-block;
+}
+
+.profile__body {
+  background-color: var(--main-light-grey-color);
+  min-height: 100vh;
+}
+
+.profile__section--top {
+  position: relative;
+  top: -100px;
+  margin-bottom: -35px;
+}
+
+.profile__edit-icon {
+  font-size: 18px;
+  float: right;
+  color: var(--main-blue-color);
+  padding: 0px 10px;
+}
+
+.section__add-entry-icon {
+  font-size: 18px;
+  float: right;
+  color: var(--main-blue-color);
+  padding: 0px 10px;
+}
+
+.modal-overlay {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.45);
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+  display: block;
+}
+
+.modal__content {
+  min-width: 300px;
+  max-width: 700px;
+  background-color: white;
+  margin-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  max-height: calc(100vh - 140px);
+  overflow-y: auto;
+}
+
+.modal__exit-icon {
+  font-size: 18px;
+  float: right;
+  color: var(--main-grey-color);
+  padding: 0px 10px;
+  margin-right: -10px;
+}
+
+.modal__exit-icon:hover {
+  color: var(--main-grey-color);
+  text-decoration: none;
 }
