[client] extracted AboutSection, ExperienceSection, EducationSection, and SkillSection components from the Profile component, implemented edit button for education and experience entries, implemented delete and save for existing experience entries and delete for existing education entries
- defined three thunks in profileSlice to make (1) put request to /api/profile/experience/experience_id, (2) delete request to /api/profile/experience/experience_id, and (3) delete request to /api/profile/education/education_id
- will provide ability to edit education entries (upcoming commit)

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -86,6 +86,7 @@
 .profile__body {
   background-color: var(--main-light-grey-color);
   min-height: 100vh;
+  padding: 25px;
 }
 
 .profile__section--top {
@@ -158,4 +159,23 @@
 .remove-anchor-style {
   color: unset !important;
   text-decoration: none !important;
+}
+
+.section__skill {
+  font-weight: 500;
+}
+
+.list-group-item__title {
+  font-size: 1.2rem;
+}
+
+.list-group-item__subheading {
+  font-size: 1rem;
+  font-weight: unset;
+}
+
+.edit-entry-icon {
+  font-size: 18px;
+  color: var(--main-blue-color);
+  margin-bottom: 15px;
 }
