[client] added an AddSocialLinksModal component, connected it to the Redux store, and defined a thunk in profileSlice to make a put request to /api/profile/social

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -179,3 +179,7 @@
   color: var(--main-blue-color);
   margin-bottom: 15px;
 }
+
+.btn-outline-secondary--match-input-group-border-color {
+  border-color: #ced4da;
+}
