--- a/client/src/App.css
+++ b/client/src/App.css
@@ -258,3 +258,128 @@
   color: white;
 }
 
+.modal__content--edit-profile-picture {
+  max-width: 800px;
+}
+
+.profile-picture-editor {
+  width: 100%;
+  min-height: 350px;
+  padding: 50px 0px;
+  text-align: center;
+}
+
+.profile-picture-editor__upload-information {
+  width: 60%;
+}
+
+.upload-information__attribute-name {
+  font-weight: 500;
+}
+
+.profile-picture-editor__upload-photo-message {
+  min-height: 350px;
+  margin-top: -50px;
+  margin-bottom: -50px;
+}
+
+.profile-picture-editor__upload-photo-message:focus {
+  outline: 0px;
+}
+
+.profile-picture-editor__upload-photo-message:hover {
+  background-color: #e0e0e0;
+  transition: background-color 0.2s linear;
+}
+
+.upload-photo-message__icon {
+  font-size: 3rem;
+  margin-top: 135px;
+  margin-bottom: 15px;
+}
+
+.profile-picture-editor__slider {
+  margin-top: 35px;
+}
+
+.slider__zoom-out-button {
+  font-size: 1em;
+  display: inline-block;
+  margin-right: 1em;
+}
+
+.slider__zoom-in-button {
+  font-size: 1em;
+  display: inline-block;
+  margin-left: 1em;
+}
+
+.slider__slide {
+  display: inline-block;
+  width: 65%;
+  height: 3px;
+  background-color: var(--profile-header-color);
+  margin-bottom: 0.3em;
+  margin-right: 8px;
+  margin-left: 8px;
+}
+
+.slider_slide-group {
+  display: inline-block;
+  width: 55%;
+  position: relative;
+}
+
+.slide_group__slide {
+  display: inline-block;
+  width: 100%;
+  height: 3px;
+  background-color: var(--profile-header-color);
+  margin-bottom: 0.3em;
+}
+
+.slide_group__handle {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border-radius: 1000px;
+  background-color: #007bff;
+  /* left: -10px; */
+}
+
+.slidecontainer {
+  width: 55%;
+  display: inline-block;
+  position: relative;
+  top: -0.3em;
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 3px;
+  border-radius: 5px;
+  background: var(--profile-header-color);
+  outline: none;
+  /* opacity: 0.7; */
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #007bff;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #007bff;
+  cursor: pointer;
+}
