--- a/client/src/App.css
+++ b/client/src/App.css
@@ -298,75 +298,42 @@
   margin-bottom: 15px;
 }
 
-.profile-picture-editor__slider {
+.profile-picture-editor__zoom-selector {
   margin-top: 35px;
 }
 
-.slider__zoom-out-button {
+.zoom-selector__zoom-out-button {
   font-size: 1em;
   display: inline-block;
   margin-right: 1em;
 }
 
-.slider__zoom-in-button {
+.zoom-selector__zoom-in-button {
   font-size: 1em;
   display: inline-block;
   margin-left: 1em;
 }
 
-.slider__slide {
-  display: inline-block;
-  width: 65%;
-  height: 3px;
-  background-color: var(--profile-header-color);
-  margin-bottom: 0.3em;
-  margin-right: 8px;
-  margin-left: 8px;
-}
-
-.slider_slide-group {
-  display: inline-block;
-  width: 55%;
-  position: relative;
-}
-
-.slide_group__slide {
-  display: inline-block;
-  width: 100%;
-  height: 3px;
-  background-color: var(--profile-header-color);
-  margin-bottom: 0.3em;
-}
-
-.slide_group__handle {
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  border-radius: 1000px;
-  background-color: #007bff;
-  /* left: -10px; */
-}
-
-.slidecontainer {
+.zoom-selector__slider-container {
   width: 55%;
   display: inline-block;
   position: relative;
   top: -0.3em;
 }
 
-.slider {
+.slider-container__slider {
   -webkit-appearance: none;
+  appearance: none;
   width: 100%;
   height: 3px;
   border-radius: 5px;
   background: var(--profile-header-color);
   outline: none;
-  /* opacity: 0.7; */
   -webkit-transition: 0.2s;
   transition: opacity 0.2s;
 }
 
-.slider::-webkit-slider-thumb {
+.slider-container__slider::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
   width: 20px;
@@ -376,7 +343,7 @@
   cursor: pointer;
 }
 
-.slider::-moz-range-thumb {
+.slider-container__slider::-moz-range-thumb {
   width: 20px;
   height: 20px;
   border-radius: 50%;
