[client] updated the GeneralInformationSection to show the user’s uploaded profile picture or the one from gravatar if they haven’t uploaded one through our editor

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,7 +49,7 @@
 }
 
 .profile__profile-picture {
-  height: 110px;
+  height: 120px;
 }
 
 .section__name {
@@ -245,9 +245,13 @@
 
 .profile__edit-profile-picture-button {
   position: relative;
-  left: 65px;
-  top: -25px;
+  left: 72px;
+  top: -27px;
   font-size: 1.2rem;
+}
+
+.profile__edit-profile-picture-button:focus {
+  outline: none;
 }
 
 .edit-profile-picture-button__backdrop {
