--- a/client/src/App.css
+++ b/client/src/App.css
@@ -44,8 +44,8 @@
 }
 
 .profile__header {
-  background-color: var(--profile-header-color);
-  height: 400px;
+  background-color: var(--main-light-grey-color);
+  height: 250px;
 }
 
 .profile__profile-picture {
@@ -254,11 +254,11 @@
   outline: none;
 }
 
-.edit-profile-picture-button__backdrop {
+.edit-picture-button__backdrop {
   color: #2b57ff;
 }
 
-.edit-profile-picture-button__icon {
+.edit-picture-button__icon {
   color: white;
 }
 
@@ -361,4 +361,31 @@
   margin-right: 1.25rem;
   margin-top: 35px;
   padding: 0rem 1rem;
+}
+
+.profile__edit-cover-image-button {
+  font-size: 1.2rem;
+  float: right;
+  margin-right: 25px;
+  margin-top: 25px;
+  padding: 0px 10px;
+}
+
+.profile__edit-cover-image-button:focus {
+  outline: 0px;
+}
+
+.profile__cover-image-overlay {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-position-x: center;
+}
+
+.profile__cover-image-header {
+  height: 400px;
+  background-color: var(--profile-header-color);
 }
