[client] implemented a basic version of the explore page
- the implementation doesn't yet include pagination or a search bar; it uses the /api/profile/all route which will likely be replaced in an upcoming commit
- a part of the implementation involved  extracting a SocialLinks component from the SocialLinksSection component for use in the ProfileSummaryCard component; the SocialLinksSection will be made to use this component in an upcoming commit

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -389,3 +389,58 @@
   height: 400px;
   background-color: var(--profile-header-color);
 }
+
+.explore__header {
+  height: 250px;
+}
+
+.explore__body {
+  min-height: 100vh;
+  padding: 25px 0px;
+}
+
+.user-card {
+  min-height: 150px;
+  border-bottom: 1px solid lightgrey;
+  padding: 15px;
+}
+
+.user-card__profile-picture {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  height: 120px;
+}
+
+.user-card__name {
+  font-size: 2rem;
+  font-weight: 500;
+}
+
+.user-card__location {
+  font-size: 1.1rem;
+  font-weight: 400;
+}
+
+.user-card__header {
+  font-size: 1.1rem;
+  font-weight: 400;
+}
+
+.user-card__connect-icon {
+  font-size: 1.5rem;
+  color: var(--main-grey-color);
+  padding: 15px;
+}
+
+.user-card:hover {
+  background-color: #d3d3d32b;
+  transition: background-color 0.2s linear;
+}
+
+.fs-1_5-rem {
+  font-size: 1.5rem;
+}
