--- a/client/src/App.css
+++ b/client/src/App.css
@@ -493,6 +493,10 @@
   margin-bottom: 0px;
 }
 
+.quill.quill--about .ql-editor {
+  height: 250px !important;
+}
+
 @media (min-width: 576px) {
   .connect-icon-padding-compensation {
     margin-left: -15px;
