[client] implemented an additional confirmation modal to verify user wants to discard unsaved changes
- applied it in the about modal; will add it to the remaining modals used on the profile page in an upcoming commit
- prevents a modal from closing if the user accidentally cancels out of a modal with unsaved changes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -146,6 +146,11 @@
   overflow-y: auto;
 }
 
+.modal__content--discard_changes {
+  max-width: 500px;
+  margin-top: 175px;
+}
+
 .modal__exit-icon {
   font-size: 18px;
   float: right;
