[client] added the confirmation modal to verify user wants to discard unsaved changes to the AddSocialLinksModal

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -146,9 +146,13 @@
   overflow-y: auto;
 }
 
-.modal__content--discard_changes {
+.discard-changes {
   max-width: 500px;
   margin-top: 175px;
+}
+
+.discard-changes--margin-top-150 {
+  margin-top: 150px;
 }
 
 .modal__exit-icon {
