[client] implemented an additional loading icon modal to signify the loading status for requests made through profile modals by the user
- displays an additional modal overlay on top of an already open modal with the loading icon
- applied it in the about modal; will add it to the remaining modals used on the profile page in upcoming commits

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -135,6 +135,10 @@
   display: block;
 }
 
+.modal-overlay--light-background {
+  background: rgba(245, 245, 245, 0.35);
+}
+
 .modal__content {
   min-width: 300px;
   max-width: 700px;
@@ -146,12 +150,16 @@
   overflow-y: auto;
 }
 
-.discard-changes {
+.modal__content--remove-background-color {
+  background-color: transparent;
+}
+
+.secondary-modal {
   max-width: 500px;
   margin-top: 175px;
 }
 
-.discard-changes--margin-top-150 {
+.secondary-modal--margin-top-150 {
   margin-top: 150px;
 }
 
