[client] updated the AddSocialLinksModal and SocialLinksSection components to accommodate a GitHub social link

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -660,6 +660,10 @@
   height: 35px;
 }
 
+.clear-both {
+  clear: both;
+}
+
 @media (min-width: 576px) {
   .connect-icon-padding-compensation {
     margin-left: -15px;
